# cottontaildb-python-client

./: LICENSE  README.md  setup.cfg
.github/workflows/: python-package.yml
cottontaildb_client/: __init__.py  __main__.py  cottontail_pb2.py  cottontail_pb2.pyi  cottontail_pb2_grpc.py  cottontaildb_cli.py  cottontaildb_client.py
src/cottontaildb_client/: __init__.py  cottontail_pb2.py  cottontail_pb2_grpc.py  cottontaildb_client.py
tests/: test_cottontaildb_client.py
