[metadata]
name = cottontaildb-client
version = 0.0.6
author = Florian Spiess
author_email = florian.spiess@unibas.ch
description = A Cottontail DB gRPC client.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Spiess/cottontaildb-python-client
project_urls =
    Bug Tracker = https://github.com/Spiess/cottontaildb-python-client/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    grpcio
    grpcio-tools

[options.entry_points]
console_scripts =
    cottontaildb-client = cottontaildb_client.cottontaildb_cli:cli